<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/mainActionsItems" >
        <item
            android:id="@+id/action_addItem"
            android:icon="@android:drawable/ic_input_add"
            android:orderInCategory="1"
            android:showAsAction="always"
            android:title="@string/addItem"/>
        <item
            android:id="@+id/action_startBatchMode"
            android:icon="@android:drawable/ic_media_play"
            android:orderInCategory="2"
            android:showAsAction="always"
            android:title="@string/startBatchMode"/>
    </group>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="withText"
        android:title="@string/action_settings"/>

</menu>